--- a/.github/workflows/go-ci-cd.yml
+++ b/.github/workflows/go-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Go CI/CD Pipeline
+name: Go CI/CD
 
 on:
   push:
@@ -10,29 +10,38 @@ on:
 
 jobs:
   build:
-    name: Build and Test
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Go
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.21  # Change this if using a different Go version
+          go-version: 1.21  # Change to your Go version
 
-      - name: Install Dependencies
-        run: go mod tidy
+      - name: Restore Go Modules Cache (if go.sum exists)
+        id: cache-go-mod
+        uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: go-mod-${{ runner.os }}-${{ hashFiles('go.sum') }}
+          restore-keys: |
+            go-mod-${{ runner.os }}-
 
-      - name: Build Go Application
-        run: go build -o bin/go-ci-cd main.go
+      - name: Initialize Go Modules (if needed)
+        run: |
+          go mod tidy || echo "No dependencies to install"
+
+      - name: Build Project
+        run: go build -v ./...
 
       - name: Run Tests
-        run: go test ./...
+        run: go test -v ./...
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: go-ci-cd-artifact
-          path: bin/go-ci-cd
+          name: go-ci-cd-binary
+          path: ./go-ci-cd  # Adjust to your binary name if different
